Fix popup Z-index. Increase autosave duration

--- a/src/styles/_editor.scss
+++ b/src/styles/_editor.scss
@@ -143,7 +143,7 @@
     background-color: white;
     border: 1px solid #eee;
     position: fixed;
-    z-index: 99999999;
+    z-index: 99999;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
